feat: 添加 schedule 子命令以支持每日自动下载壁纸，并提供 crontab 集成指引

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -13,3 +13,4 @@ error_gowall_convert_failed: "gowall convert failed: %{reason}"
 error_gowall_list_failed: "gowall list failed: %{reason}"
 error_utf8: "Path contains non-UTF-8 characters"
 error_no_wallpapers: "No matching wallpapers found"
+schedule_tip: "Schedule task completed!\nTip: You can add the following line via `crontab -e` to run daily at 1 AM:\n0 1 * * * %{bin_path} schedule"
