--- a/locales/zh-CN.yml
+++ b/locales/zh-CN.yml
@@ -13,3 +13,4 @@ error_gowall_convert_failed: "gowall convert 失败: %{reason}"
 error_gowall_list_failed: "gowall list 失败: %{reason}"
 error_utf8: "路径包含非 UTF-8 字符"
 error_no_wallpapers: "未找到符合条件的壁纸"
+schedule_tip: "定时任务已完成！\n提示：你可以通过 `crontab -e` 添加以下行来实现每天凌晨 1 点自动执行：\n0 1 * * * %{bin_path} schedule"
