--- a/locales/en.yml
+++ b/locales/en.yml
@@ -8,6 +8,9 @@ convert_start: "Converting wallpaper theme: %{image} -> %{theme}"
 convert_done: "Conversion complete! Output directory: %{path}"
 themes_title: "Available gowall themes (%{count}):"
 all_done: "All done! Wallpaper downloaded and %{theme} theme applied."
+setting_wallpaper: "Setting system wallpaper..."
+set_done: "Wallpaper set successfully!"
+error_set_failed: "Failed to set wallpaper: %{reason}"
 error_gowall_not_installed: "gowall is not installed. Please install it first: https://github.com/Achno/gowall#installation"
 error_gowall_convert_failed: "gowall convert failed: %{reason}"
 error_gowall_list_failed: "gowall list failed: %{reason}"
