--- a/locales/zh-CN.yml
+++ b/locales/zh-CN.yml
@@ -8,6 +8,9 @@ convert_start: "正在转换壁纸主题: %{image} -> %{theme}"
 convert_done: "转换完成！输出目录: %{path}"
 themes_title: "可用的 gowall 主题 (%{count} 个):"
 all_done: "全部完成！壁纸已下载并应用 %{theme} 主题。"
+setting_wallpaper: "正在设置为系统壁纸..."
+set_done: "壁纸设置成功！"
+error_set_failed: "设置壁纸失败: %{reason}"
 error_gowall_not_installed: "gowall 未安装，请先安装: https://github.com/Achno/gowall#installation"
 error_gowall_convert_failed: "gowall convert 失败: %{reason}"
 error_gowall_list_failed: "gowall list 失败: %{reason}"
