feat: 添加 config 子命令并支持配置默认搜索关键词

--- a/locales/zh-CN.yml
+++ b/locales/zh-CN.yml
@@ -17,3 +17,12 @@ error_gowall_list_failed: "gowall list 失败: %{reason}"
 error_utf8: "路径包含非 UTF-8 字符"
 error_no_wallpapers: "未找到符合条件的壁纸"
 schedule_tip: "定时任务已完成！\n提示：你可以通过 `crontab -e` 添加以下行来实现每天凌晨 1 点自动执行：\n0 1 * * * %{bin_path} schedule"
+config_title: "当前配置："
+config_path: "  配置文件路径：%{path}"
+config_wallpaper_dir: "  壁纸保存目录：%{path}"
+config_search_defaults: "  默认搜索参数："
+config_query: "    搜索关键词：%{query}"
+config_res: "    分辨率：%{res}"
+config_sorting: "    排序方式：%{sorting}"
+config_updated: "配置已更新：%{key} = %{value}"
+config_error_unknown_key: "未知配置项：%{key}"
