--- a/locales/en.yml
+++ b/locales/en.yml
@@ -17,3 +17,12 @@ error_gowall_list_failed: "gowall list failed: %{reason}"
 error_utf8: "Path contains non-UTF-8 characters"
 error_no_wallpapers: "No matching wallpapers found"
 schedule_tip: "Schedule task completed!\nTip: You can add the following line via `crontab -e` to run daily at 1 AM:\n0 1 * * * %{bin_path} schedule"
+config_title: "Current Configuration:"
+config_path: "  Config Path: %{path}"
+config_wallpaper_dir: "  Wallpaper Dir: %{path}"
+config_search_defaults: "  Search Defaults:"
+config_query: "    Query: %{query}"
+config_res: "    Resolution: %{res}"
+config_sorting: "    Sorting: %{sorting}"
+config_updated: "Config updated: %{key} = %{value}"
+config_error_unknown_key: "Unknown config key: %{key}"
