feat: add 'wallow-' prefix to downloads and implement 'clean' command

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -26,3 +26,6 @@ config_res: "    Resolution: %{res}"
 config_sorting: "    Sorting: %{sorting}"
 config_updated: "Config updated: %{key} = %{value}"
 config_error_unknown_key: "Unknown config key: %{key}"
+cleaning_dir: "Cleaning directory: %{path}"
+deleted: "Deleted:"
+clean_done: "Cleaning complete! Deleted %{count} files."
