--- a/locales/zh-CN.yml
+++ b/locales/zh-CN.yml
@@ -26,3 +26,6 @@ config_res: "    分辨率：%{res}"
 config_sorting: "    排序方式：%{sorting}"
 config_updated: "配置已更新：%{key} = %{value}"
 config_error_unknown_key: "未知配置项：%{key}"
+cleaning_dir: "正在清理目录: %{path}"
+deleted: "已删除:"
+clean_done: "清理完成！共删除 %{count} 个文件。"
