feat: update localization strings for new features
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -29,3 +29,5 @@ config_error_unknown_key: "Unknown config key: %{key}"
 cleaning_dir: "Cleaning directory: %{path}"
 deleted: "Deleted:"
 clean_done: "Cleaning complete! Deleted %{count} files."
+list_found: "Found %{count} wallpapers, starting interactive selection..."
+fzf_error: "Failed to start fzf, please ensure it is installed."
