--- a/locales/zh-CN.yml
+++ b/locales/zh-CN.yml
@@ -29,3 +29,5 @@ config_error_unknown_key: "未知配置项：%{key}"
 cleaning_dir: "正在清理目录: %{path}"
 deleted: "已删除:"
 clean_done: "清理完成！共删除 %{count} 个文件。"
+list_found: "发现 %{count} 张壁纸，正在启动交互式选择..."
+fzf_error: "无法启动 fzf，请检查是否已安装。"
