feat: add pre-flight checks for fzf and chafa before launching list --fzf
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -31,3 +31,4 @@ deleted: "Deleted:"
 clean_done: "Cleaning complete! Deleted %{count} files."
 list_found: "Found %{count} wallpapers, starting interactive selection..."
 fzf_error: "Failed to start fzf, please ensure it is installed."
+chafa_required: "chafa is required for image preview in WezTerm. Install it with: brew install chafa"
