--- a/locales/zh-CN.yml
+++ b/locales/zh-CN.yml
@@ -31,3 +31,4 @@ deleted: "已删除:"
 clean_done: "清理完成！共删除 %{count} 个文件。"
 list_found: "发现 %{count} 张壁纸，正在启动交互式选择..."
 fzf_error: "无法启动 fzf，请检查是否已安装。"
+chafa_required: "WezTerm 下图片预览需要安装 chafa，请运行: brew install chafa"
