feat: add i18n strings for upgrade and uninstall
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -32,3 +32,13 @@ clean_done: "Cleaning complete! Deleted %{count} files."
 list_found: "Found %{count} wallpapers, starting interactive selection..."
 fzf_error: "Failed to start fzf, please ensure it is installed."
 chafa_required: "chafa is required for image preview in WezTerm. Install it with: brew install chafa"
+upgrade_checking: "Checking for latest version..."
+upgrade_already_latest: "Already on the latest version (v%{version}). Nothing to do."
+upgrade_found: "New version available! Current: v%{current}, Latest: %{latest}"
+upgrade_downloading: "Downloading: %{url}"
+upgrade_done: "Upgrade complete! Updated to %{version}."
+uninstall_start: "Uninstalling wallow..."
+uninstall_removed_dir: "Removed directory: %{path}"
+uninstall_kept_wallpapers: "Wallpaper files kept."
+uninstall_removed_bin: "Removed binary: %{path}"
+uninstall_done: "Uninstall complete! wallow has been fully removed."
