--- a/locales/zh-CN.yml
+++ b/locales/zh-CN.yml
@@ -32,3 +32,13 @@ clean_done: "清理完成！共删除 %{count} 个文件。"
 list_found: "发现 %{count} 张壁纸，正在启动交互式选择..."
 fzf_error: "无法启动 fzf，请检查是否已安装。"
 chafa_required: "WezTerm 下图片预览需要安装 chafa，请运行: brew install chafa"
+upgrade_checking: "正在检查最新版本..."
+upgrade_already_latest: "已是最新版本 (v%{version})，无需更新。"
+upgrade_found: "发现新版本！当前: v%{current}，最新: %{latest}"
+upgrade_downloading: "正在下载: %{url}"
+upgrade_done: "更新完成！已升级到 %{version}。"
+uninstall_start: "开始卸载 wallow..."
+uninstall_removed_dir: "已删除目录: %{path}"
+uninstall_kept_wallpapers: "已保留壁纸文件。"
+uninstall_removed_bin: "已删除二进制文件: %{path}"
+uninstall_done: "卸载完成！wallow 已被完全移除。"
